# ros_ws_golf_pc

devel/: .catkin  .rosinstall  setup.sh
devel/include/cortex_bridge/: Marker.h  Markers.h  cortexSetOriginRequest.h  cortexSetOriginResponse.h
devel/include/haptic_base/: DSValues.h  PWMValues.h  PWMValues16.h  PutterValues.h
devel/include/haptic_golf/: LSM9DS_raw.h
devel/include/ros_start/: Rt1Sensor.h  Rt2Sensor.h
devel/include/rosserial_arduino/: Adc.h  TestRequest.h  TestResponse.h
devel/include/rosserial_mbed/: Adc.h  TestRequest.h  TestResponse.h
devel/include/rosserial_msgs/: Log.h  RequestMessageInfoRequest.h  RequestMessageInfoResponse.h  RequestParamRequest.h  RequestParamResponse.h  RequestServiceInfoRequest.h  RequestServiceInfoResponse.h  TopicInfo.h
devel/lib/cortex_bridge/: cortex_bridge
devel/lib/haptic_golf/: imu_postproc  mc_putt_meas  rad_deg_print
devel/lib/lra_test_accel/: online_feedback  putter_motors
devel/lib/pkgconfig/: cortex_bridge.pc  haptic_base.pc  haptic_golf.pc  lra_test_accel.pc  ros_start.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_windows.pc  rosserial_xbee.pc  using_markers.pc
devel/lib/ros_start/: rosrt_rt1  rosrt_rt2
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
devel/lib/using_markers/: basic_shapes  imu_sub
src/: .rosinstall  .rosinstall.bak
src/cortex_ros_bridge/: CMakeLists.txt
src/cortex_ros_bridge/launch/: cortex_bridge.launch
src/cortex_ros_bridge/src/: MarkerHandler.cpp  TransformHandler.cpp  cortex.cpp  cortex_bridge.cpp
src/haptic_base/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/haptic_base/msg/: DSValues.msg  PWMValues.msg  PWMValues16.msg  PutterValues.msg
src/haptic_base/src/: pathtrack_publisher.cpp~  publisher.cpp~
src/lra_test_accel/: CMakeLists.txt
src/lra_test_accel/imu_data/: .~lock.Anthonny4mTrimmed.csv#  ALGORITHM.TXT  Anthonny4m.csv  Anthonny4mTrimmedOffset.csv  PerfectTimingAnthonny.csv  acc.csv  angle4mModelBased.csv  dataPlotJose.csv  gyro.csv  rpy4mMod.csv  rpy4mModTrimed.csv
src/lra_test_accel/include/: kalman.hpp
src/lra_test_accel/launch/: accel.launch  (+12 more)
src/using_markers/: CMakeLists.txt
src/using_markers/launch/: imu_meas.launch
src/using_markers/src/: basic_shapes.cpp  basic_shapes_old.cpp
(+94 files in other folders)
